SC/20: Use \myfig to make the regridded-cube graphic appear.

--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -954,17 +954,11 @@ velocity) is reported in the output section.
 You can visualise your map by opening it with \gaia\ -- see
 Figure~\ref{fig:gaiareduced}.
 
-\begin{figure}[t!]
-\begin{center}
-\includegraphics[width=0.65\linewidth]{sc20_makecubeout}
-\label{fig:gaiareduced}
-\caption[A regridded cube produced with \makecube.]{The regridded cube
-displayed with \gaia. The 5$\times$5 jiggle pattern is evident in the
-map as is the missing receptor in the top left corner. The smaller
-window shows the spectrum for the pixel selected by the blue cross on
-the map. }
-\end{center}
-\end{figure}
+\myfig{sc20_makecubeout}{[t!]}{width=0.65\linewidth}{fig:gaiareduced}{A regridded cube produced with \makecube.}{
+  The regridded cube displayed with \gaia. The 5$\times$5 jiggle
+  pattern is evident in the map as is the missing receptor in the
+  top-left corner. The smaller window shows the spectrum for the pixel
+  selected by the blue cross on the map.}
 
 \subsection{Reducing multiple observations}
 
