SC/20: Clarify group files and correct description.
Not all text files supplied to Starlink tasks are group files.

--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -962,11 +962,11 @@ Figure~\ref{fig:gaiareduced}.
 
 \subsection{Reducing multiple observations}
 
-You can supply \makecube\ with an ASCII file containing a list of all
-the raw files you want reduced. These filenames should include the
+You can supply \makecube\ a group in a text file containing a list of
+all the raw files you want reduced. These filenames should include the
 full path if they are not in the local directory.
 
-When you pass an ASCII file to \makecube\ (and any \starlink\ command)
+When you pass such group files to \makecube\ (and any \starlink\ command)
 you should prefix the filename with an up-caret (\,\^\,).
 \begin{terminalv}
 % makecube in=^filelist.txt
