--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -272,11 +272,12 @@ instance of \task{stats} is printed to the screen.
 
 \parget\ is designed to make life easier when passing values between
 shell scripts. In the C-shell scripting example below, the median
-value from \task{histat} is assigned to the variable med.
-\vspace{0.3cm}
+value from \task{histat} is assigned to the variable med.  Note the
+use of the back quotes.
 
-\texttt{set med = \`{}parget median histat\`{}}
-\vspace{0.3cm}
+\begin{terminalv}
+set med = `parget median histat`
+\end{terminalv}
 
 If the parameter comprises a vector of values these can be stored in a
 C-shell array. For other scripting languages such as Python, the
