--- a/applications/smurf/docs/sun259/sun259.tex
+++ b/applications/smurf/docs/sun259/sun259.tex
@@ -266,14 +266,14 @@
 GSD2ACSIS has the task of mapping the GSD data, stored in headers and arrays, into the ACSIS format output file(s).  Due to the differences in the two file formats, there is not a one-to-one mapping between the two.  This document provides the mapping used to obtain the various headers and arrays found in the ACSIS format files, from those given in the GSD input file.
 
 \section{\xlabel{ACSIS_file_format}ACSIS File Format}
-ACSIS files use the \xref{NDF}{sun33} file format and consist of three primary extensions, the MORE extension (with the ACSIS, JCMTSTATE, and FITS extensions), the WCS extension (world coordinates of RA/Dec and frequency) and the data array.
+ACSIS files use the \xref{NDF}{sun33}{} file format and consist of three primary extensions, the MORE extension (with the ACSIS, JCMTSTATE, and FITS extensions), the WCS extension (world coordinates of RA/Dec and frequency) and the data array.
 
 See the ACSIS File Format interface Control Document (\htmladdnormallink{OCS/ICD/022}{http://docs.jach.hawaii.edu/JCMT/OCS/ICD/022/ocs_icd_022.pdf}) for more details.
 
 \section{\xlabel{GSD_file_format}GSD File Format}
 The DAS and AOSC backends wrote files in the GSD file format.  GSD files contain lists of scalar and array data elements, prefaced by a prolog which describes the data and is used to retrieve it.  The Starlink GSD library contains routines for accessing the data within GSD format files.
 
-See \htmladdnormallink{GSD - Global Section Datafile System}{http://docs.jach.hawaii.edu/JCMT/MT/IN/033/mtin033.txt} and \xref{The Global Section Datafile(GSD) access library}{sun229} for more details.
+See \htmladdnormallink{GSD - Global Section Datafile System}{http://docs.jach.hawaii.edu/JCMT/MT/IN/033/mtin033.txt} and \xref{The Global Section Datafile(GSD) access library}{sun229}{} for more details.
 
 For a full list of scalar and array data stored in DAS and AOSC GSD files see the Appendix of this document.
 
